Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
0.11.0
-
None
-
None
-
raspberry pi 3b+ 64 bit (emulated w/ qemu)
Description
- ossp-uuid doesn't recognize the aarch64-linux-gnu target, pass --build=aarch64-linux-gnu --target=aarch64-linux-gnu to ./configure
- ossp-uuid thinks aarch64 is an invalid platform, needs patch or upgrade
- yaml-cpp lib path issue: passthrough CMAKE_INSTALL_LIBDIR
- spdlog lib path issue: make[2]: *** No rule to make target 'thirdparty/spdlog-install/lib/aarch64-linux-gnu/libspdlog.a', needed by 'bin/libcore-minifi.so'. Stop. (found under lib/libspdlog.a without the target triplet)
- TimeUtilTests.cpp: no "January" on libstdc++10 (this should be a problem on x86, too)
- StringUtilsTests.cpp:390: narrowing conversions result in -Wnarrowing error despite no -Werror. Either because of initializer list (shouldn't be an issue IMO since this is not direct-list-initialization) or compiler bug.
- curl lib path issue: make[2]: *** No rule to make target 'thirdparty/curl-install/lib/aarch64-linux-gnu/libcurl.a', needed by 'bin/libminifi-http-curl.so'. Stop.
- civetweb lib path
- rocksdb lib path
- probably all other ExternalProject libs. GNUInstallDirs CMAKE_INSTALL_LIBDIR references seem to include the architecture triplet after lib/, but the builds don't
Attachments
Attachments
Issue Links
- is related to
-
MINIFICPP-1792 Build fails with cmake 3.23.0
- Resolved