MINIFICPP-1756 fix libstdc++10 issue

Signed-off-by: Adam Debreceni <adebreceni@apache.org>

This closes #1263