libminifi/include/utils/TimeUtil.h
@@ -31,6 +31,8 @@
 #include <functional>
 #include <algorithm>
 
+#include "date/date.h"
+
 #define TIME_FORMAT "%Y-%m-%d %H:%M:%S"
 
 namespace org {
