libminifi/test/unit/TimeUtilTests.cpp
@@ -99,7 +99,7 @@ TEST_CASE("Test time conversion", "[testtimeconversion]") {
 TEST_CASE("Test system_clock epoch", "[systemclockepoch]") {
   using namespace std::chrono;
   time_point<system_clock> epoch;
-  time_point<system_clock> unix_epoch_plus_3e9_sec = sys_days(January / 24 / 2065) + 5h + 20min;
+  time_point<system_clock> unix_epoch_plus_3e9_sec = date::sys_days(date::January / 24 / 2065) + 5h + 20min;
   REQUIRE(epoch.time_since_epoch() == 0s);
   REQUIRE(unix_epoch_plus_3e9_sec.time_since_epoch() == 3000000000s);
 }
